--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Royhan jelek
+<!DOCTYPE html>
+
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<head>
+    <meta charset="utf-8" />
+    <title>Royhan Jelek</title>
+</head>
+<body>
+    <h1>Royhan Jelek</h1>
+</body>
+</html>
