--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <h1>Royhan Jelek</h1>
     <div class="d-flex justify-content-center">
-        <img class="img-fluid" src="share/test.jpeg" />
+        <img class="img-fluid" src="share/test2.PNG" />
     </div>
 
 
