--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 						<div class="col-md-8"  data-aos="fade-up" data-aos-duration="1000">
 							<div class="card p-2">
 								<p class="mb-0 nameDesc" style="color:white;">Resepsi</p>
-								<div>
+								<div class="ps-3 " style="text-align: left;">
 									<p class="mb-1" style="color:white"><i style="color:white" class="fa-regular fa-calendar-days me-2"></i>Minggu, 8 September 2024</p>
 								</div>
 
