--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 				color:white;
 			}
 			#target-date{
-				font-size: 12px;
+				font-size: 15px;
 			}
 			.imgBismillah{
 				width: 40%!important;
@@ -209,15 +209,15 @@
 			    	<p data-aos="zoom-in-up" data-aos-duration="2000" class="titleWedding" style="font-size: 20px!important;">The Wedding Of</p>
 			
 			   
-	    			<div data-aos="fade-up mt-3" data-aos-duration="2000" class="d-flex justify-content-center">
+	    			<div data-aos="fade-up mt-4" data-aos-duration="2000" class="d-flex justify-content-center">
 						<div class="dvContainerAi">
 		    				<img class="img-fluid" src="share/imgUtama.png">
 		    			</div>
 	    			</div>
 
-	    			<p id="target-date" class="mt-3 text-black" style="font-weight: 600" data-aos="fade-up" data-aos-duration="2000"></p>
+	    			<p id="target-date" class="mt-4 text-black" style="font-weight: 600" data-aos="fade-up" data-aos-duration="2000"></p>
 
-					<div id="countdown" class="d-flex justify-content-center">
+					<div id="countdown" class="d-flex justify-content-center mt-3">
 						<div class="dvCountDown" data-aos="fade-up" data-aos-duration="500">
 			 				<div id="days" style="color:white;">--</div>
 	  						<div class="unit-label">Hari</div>
@@ -300,7 +300,7 @@
 								</div>
 
 								<div class="ps-3 " style="text-align: left;">
-									<p class="mb-1" style="color:white"><i style="color:white" class="fa-regular fa-clock me-2"></i> 09.00 WIB - 11.00 WIB</p>
+									<p class="mb-1" style="color:white"><i style="color:white" class="fa-regular fa-clock me-2"></i> 11.00 WIB - 20.00 WIB</p>
 								</div>
 
 								<div class="ps-3 d-flex" style="text-align: left;">
